[Thực hành] Luyện tập với cấu trúc switch-case

--- a/TH3/BT1.html
+++ b/TH3/BT1.html
@@ -10,6 +10,7 @@
     
 </body>
 <script>
+    let browser = prompt("please type your: ")
     switch (browser) {
         case 'Edge':
             alert("You've got the Edge!");
